--- a/PhD_notebook/PhD_Notebook.tex
+++ b/PhD_notebook/PhD_Notebook.tex
@@ -175,6 +175,27 @@
 \subsection{Course Preparation}
 
 %======================================================================
+\section{Bibliography}
+
+\section{Powder production processes}
+
+\section{Factors influencing metallic powder size and quality during gas atomization}
+
+\subsection{Material properties}
+
+\subsubsection{Pure metal}
+
+\subsubsection{Alloy}
+
+\subsection{Gaz environment}
+
+\subsection{Nozzle geometry}
+
+\subsection{Thermal condition}
+
+
+
+%======================================================================
 \section{Experiments}
 
 \subsection{Experiment 1}
