--- a/litterature/PhD_litterature.tex
+++ b/litterature/PhD_litterature.tex
@@ -127,7 +127,7 @@
 	
 	%..........................TABLE OF CONTENTS / FIGURES / LIST OF TABLE ........................
 	
-	\newpage
+	% \newpage
 	\tableofcontents\thispagestyle{fancy}
 	%\newpage
 	%\listoffigures\thispagestyle{fancy}
