--- a/PhD_manuscript/bib.bib
+++ b/PhD_manuscript/bib.bib
@@ -28,6 +28,18 @@
   file = {C:\Users\reymo\Zotero\storage\JWVTU59D\Li et al. - 2020 - Effects of different nozzle materials on atomization results via CFD simulation.pdf}
 }
 
+@book{Neikov2009HandbookNonFerrousMetal,
+  title = {Handbook of {{Non-Ferrous Metal Powders}}: {{Technologies}} and {{Applications}}},
+  shorttitle = {Handbook of {{Non-Ferrous Metal Powders}}},
+  editor = {Neikov, Oleg D. and Naboychenko, Stanislav S. and Mourachova, Irina},
+  year = 2009,
+  publisher = {Elsevier},
+  address = {Burlington},
+  isbn = {978-1-85617-422-0 978-0-08-055940-7},
+  langid = {english},
+  file = {C:\Users\reymo\Zotero\storage\4ATUI9FB\Neikov et al. - 2009 - Handbook of Non-Ferrous Metal Powders Technologies and Applications.pdf}
+}
+
 @article{Wang2023Numericalanalysisdroplet,
   title = {Numerical Analysis of Droplet Breakup, Cooling, and Solidification during Gas Atomisation},
   author = {Wang, Gezhou and Deng, Yuanbin and {Adjei-Kyeremeh}, Frank and Zhang, Jiali and Raffeis, Iris and {B{\"u}hrig-Polaczek}, Andreas and Kaletsch, Anke and Broeckmann, Christoph},
