--- a/PhD_notebook/PhD_Notebook.tex
+++ b/PhD_notebook/PhD_Notebook.tex
@@ -210,10 +210,10 @@
 
 
 
-\nocite{*}
-\bibliographystyle{unsrt} 
+
+\bibliographystyle{unsrt}  
 % \renewcommand{\refname}{} % --> to hide the automatic "reference title"
-\bibliography{Gaz_atom.bib}
+\bibliography{Gas_atom}
 
 
 
