--- a/PhD_notebook/bibliography.tex
+++ b/PhD_notebook/bibliography.tex
@@ -2,8 +2,7 @@
 
 \subsection{Powder production processes}
 
-\subsection{Gas atomization}
-
+\subsubsection{Gas atomization}
 \subsubsection{Water atomization}
 \subsubsection{Centrifugal atomization}
 \subsubsection{Plasma atomization}
@@ -14,13 +13,11 @@
 
 \subsection{Factors influencing metallic powder size and quality during gas atomization}
 
-\subsubsection{Material properties}
+\subsubsection{Feedstock melting}
 
-\textcolor{orange}{Feedstock property and geometry (powder, scrap, wire,metal alloy elements or pre-alloyed) impact the powder quality \cite{Kassym2020Atomizationprocessesmetal}}
+\textcolor{orange}{Feedstock property and geometry (powder, scrap, wire, metal alloy elements or pre-alloyed) impact the powder quality. If possible, taking a sample of the homogenous melted material allowing to analyze the chemistry can help to decide whether an alloying element is needed to be added \cite{Kassym2020Atomizationprocessesmetal}}.\\
 
-\paragraph{Pure metal}
-
-\paragraph{Alloy}
+Both opened and closed melting systems are used in gas atomization. \\
 
 \subsubsection{Gaz environment}
 
