--- a/PhD_notebook/bibliography.tex
+++ b/PhD_notebook/bibliography.tex
@@ -15,9 +15,11 @@
 
 \subsubsection{Feedstock melting}
 
-\textcolor{orange}{Feedstock property and geometry (powder, scrap, wire, metal alloy elements or pre-alloyed) impact the powder quality. If possible, taking a sample of the homogenous melted material allowing to analyze the chemistry can help to decide whether an alloying element is needed to be added \cite{Kassym2020Atomizationprocessesmetal}}.\\
+One of the melting process is to use a crucible heated by induction. It allows different type of feedstock as powder, scrap, wire, and can accept pure metal elements or pre-alloyed elements. All these parameters will impact the powder quality. For instance, the melted scraps can be heterogeneous and can come with oxidation and impurities. In these cases, it is recommended to take a sample of the homogenous melted material in order to analyze the chemistry \cite{Kassym2020Atomizationprocessesmetal}.\\
 
 Both opened and closed melting systems are used in gas atomization. \\
+
+
 
 \subsubsection{Gaz environment}
 
