--- a/PhD_notebook/administration.tex
+++ b/PhD_notebook/administration.tex
@@ -1,17 +1,17 @@
 \section{Administration}
 
-\todo{$\rightarrow$ Create tax card, need contract information as salary}
+\todo{$\succ$ Create tax card, need contract information as salary}
 
 $\Rightarrow$ \href{https://www.tastselv.skat.dk/fskindb2/DigitalSkat/Indberetning.aspx?pow=GlTrDyLUuykasbK6LIovUTkHHqs%2b9Bds9KsZvEnnWoWr53xUJLBS0c27KA6xBiSj9e4pmWSBMsCqAZU%2f1RBMSFfJUzrj9UPjK4H8qTAkTQE%3d}{link is here and go to Forskudsopgørelse}
 
-\todo{$\rightarrow$ Webinar "moving to Denmark and PhD at DTU}
+\todo{$\succ$  Webinar "moving to Denmark and PhD at DTU}
 
 $\Rightarrow$ \href{https://www.dtu.dk/english/about/job-and-career/moving-to-denmark/before-arrival/phd-relocation-to-denmark}{take the session 2026/02/20 from 1pm to 2 pm}
 
-\todo{$\rightarrow$ Mandaroty introduction culture day}
+\todo{$\succ$  Mandaroty introduction culture day}
 
 $\Rightarrow$ \href{https://employeecourses.dtu.dk/en/hr/administrative-staff/dtu-culture-day/}{Chose the option 10 March from 10:45 am to 2 pm}
 
-\todo{$\rightarrow$ Introduction to responsible conduct of research and research data management for new employees}
+\todo{$\succ$  Introduction to responsible conduct of research and research data management for new employees}
 
 $\Rightarrow$ \href{https://employeecourses.dtu.dk/en/hr/administrative-staff/introduction-to-responsible-conduct-of-research-and-research-data-management-for-new-employees/}{chose 6 April from 9am to 1 pm}
