--- a/PhD_notebook/bibliography.tex
+++ b/PhD_notebook/bibliography.tex
@@ -17,7 +17,7 @@
 
 One of the melting process is to use a crucible heated by induction. It allows different type of feedstock as powder, scrap, wire, and can accept pure metal elements or pre-alloyed elements. All these parameters will impact the powder quality. For instance, the melted scraps can be heterogeneous and can come with oxidation and impurities. In these cases, it is recommended to take a sample of the homogenous melted material in order to analyze the chemistry \cite{Kassym2020Atomizationprocessesmetal}.\\
 
-Both opened and closed melting systems are used in gas atomization. \\
+Both opened and closed melting systems are used in gas atomization. When the metal is molten in open air, the risk of oxidation and contamination is increased, even if the slag brings a natural protection that is very commonly used in pyro-metallurgical processes~\cite{Holappa2016SlagFormationThermodynamic}. \\
 
 
 
