--- a/PhD_notebook/Gas_atom.bib
+++ b/PhD_notebook/Gas_atom.bib
@@ -1,3 +1,12 @@
+@article{Holappa2016SlagFormationThermodynamic,
+  title = {Slag {{Formation}} --- {{Thermodynamic}} and {{Kinetic Aspects}} and {{Mechanisms}}},
+  author = {Holappa and Ka{\c c}ar},
+  year = 2016,
+  journal = {Advances in Molten Slags, Fluxes, and Salts: Proceedings of the 10th International Conference on Molten Slags, Fluxes and Salts 2016},
+  doi = {10.1007/978-3-319-48769-4_108},
+  urldate = {2026-02-14}
+}
+
 @article{Kassym2020Atomizationprocessesmetal,
   title = {Atomization Processes of Metal Powders for {{3D}} Printing},
   author = {Kassym, Kazybek and Perveen, Asma},
