--- a/PhD_notebook/bibliography.tex
+++ b/PhD_notebook/bibliography.tex
@@ -15,10 +15,11 @@
 
 \subsubsection{Feedstock melting}
 
-One of the melting process is to use a crucible heated by induction. It allows different type of feedstock as powder, scrap, wire, and can accept pure metal elements or pre-alloyed elements. All these parameters will impact the powder quality. For instance, the melted scraps can be heterogeneous and can come with oxidation and impurities. In these cases, it is recommended to take a sample of the homogenous melted material in order to analyze the chemistry \cite{Kassym2020Atomizationprocessesmetal}.\\
+One of the melting processes is to use a crucible heated by induction. It allows different types of feedstock such as powder, scrap, wire, and can accept pure metal elements or pre-alloyed elements. All these parameters will impact the powder quality. For instance, the melted scraps can be heterogeneous and may contain oxides and impurities. In these cases, it is recommended to take a sample of the homogeneous melted material in order to analyze the chemistry~\cite{Kassym2020Atomizationprocesses}.
 
-Both opened and closed melting systems are used in gas atomization. When the metal is molten in open air, the risk of oxidation and contamination is increased, even if the slag brings a natural protection that is very commonly used in pyro-metallurgical processes~\cite{Holappa2016SlagFormationThermodynamic}. \\
+Both open and closed melting systems are used in gas atomization. When the metal is molten in open air, the risk of oxidation and contamination is increased, even if the slag provides a natural protection that is very commonly used in pyro-metallurgical processes~\cite{Holappa2016SlagFormation}.\\
 
+\textcolor{violet}{In a context of process optimization, caracterizing different feedstocks with the on site facilities would be a nice sanity check to align with the literature results. Eventually, after that first step is controlled, it would be nice to continue the parameters optimization with vacuum heating}
 
 
 \subsubsection{Gaz environment}
