--- a/PhD_notebook/Gas_atom.bib
+++ b/PhD_notebook/Gas_atom.bib
@@ -1,4 +1,4 @@
-@article{Holappa2016SlagFormationThermodynamic,
+@article{Holappa2016SlagFormation,
   title = {Slag {{Formation}} --- {{Thermodynamic}} and {{Kinetic Aspects}} and {{Mechanisms}}},
   author = {Holappa and Ka{\c c}ar},
   year = 2016,
@@ -7,7 +7,7 @@
   urldate = {2026-02-14}
 }
 
-@article{Kassym2020Atomizationprocessesmetal,
+@article{Kassym2020Atomizationprocesses,
   title = {Atomization Processes of Metal Powders for {{3D}} Printing},
   author = {Kassym, Kazybek and Perveen, Asma},
   year = 2020,
@@ -21,7 +21,7 @@
   file = {C:\Users\reymo\Zotero\storage\E6YZ44N7\Kassym and Perveen - 2020 - Atomization processes of metal powders for 3D printing.pdf}
 }
 
-@article{Li2020Effectsdifferentnozzle,
+@article{Li2020Effectsdifferent,
   title = {Effects of Different Nozzle Materials on Atomization Results via {{CFD}} Simulation},
   author = {Li, Xiangyu and Du, Jianjun and Wang, Licheng and Fan, Jiangli and Peng, Xiaojun},
   year = 2020,
@@ -37,7 +37,7 @@
   file = {C:\Users\reymo\Zotero\storage\JWVTU59D\Li et al. - 2020 - Effects of different nozzle materials on atomization results via CFD simulation.pdf}
 }
 
-@book{Neikov2009HandbookNonFerrousMetal,
+@book{Neikov2009HandbookNonFerrous,
   title = {Handbook of {{Non-Ferrous Metal Powders}}: {{Technologies}} and {{Applications}}},
   shorttitle = {Handbook of {{Non-Ferrous Metal Powders}}},
   editor = {Neikov, Oleg D. and Naboychenko, Stanislav S. and Mourachova, Irina},
@@ -49,7 +49,7 @@
   file = {C:\Users\reymo\Zotero\storage\4ATUI9FB\Neikov et al. - 2009 - Handbook of Non-Ferrous Metal Powders Technologies and Applications.pdf}
 }
 
-@article{Wang2023Numericalanalysisdroplet,
+@article{Wang2023Numericalanalysis,
   title = {Numerical Analysis of Droplet Breakup, Cooling, and Solidification during Gas Atomisation},
   author = {Wang, Gezhou and Deng, Yuanbin and {Adjei-Kyeremeh}, Frank and Zhang, Jiali and Raffeis, Iris and {B{\"u}hrig-Polaczek}, Andreas and Kaletsch, Anke and Broeckmann, Christoph},
   year = 2023,
@@ -65,7 +65,7 @@
   file = {C:\Users\reymo\Zotero\storage\KFF4GPIZ\Wang et al. - 2023 - Numerical analysis of droplet breakup, cooling, and solidification during gas atomisation.pdf}
 }
 
-@article{Zhang2020Numericalsimulationstudy,
+@article{Zhang2020Numericalsimulation,
   title = {Numerical Simulation Study on Cooling of Metal Droplet in Atomizing Gas},
   author = {Zhang, Min and Zhang, Zhaoming},
   year = 2020,
@@ -76,7 +76,7 @@
   doi = {10.1016/j.mtcomm.2020.101423}
 }
 
-@article{Zou2021Prebreakupmechanismfreefall,
+@article{Zou2021Prebreakupmechanism,
   title = {Pre-Breakup Mechanism of Free-Fall Nozzle in Electrode Induction Melting Gas Atomization},
   author = {Zou, Haiping and Xiao, Zhiyu},
   year = 2021,
