--- a/PhD_notebook/bibliography.tex
+++ b/PhD_notebook/bibliography.tex
@@ -17,9 +17,9 @@
 
 One of the melting processes is to use a crucible heated by induction. It allows different types of feedstock such as powder, scrap, wire, and can accept pure metal elements or pre-alloyed elements. All these parameters will impact the powder quality. For instance, the melted scraps can be heterogeneous and may contain oxides and impurities. In these cases, it is recommended to take a sample of the homogeneous melted material in order to analyze the chemistry~\cite{Kassym2020Atomizationprocesses}.
 
-Both open and closed melting systems are used in gas atomization. When the metal is molten in open air, the risk of oxidation and contamination is increased, even if the slag provides a natural protection that is very commonly used in pyro-metallurgical processes~\cite{Holappa2016SlagFormation}.\\
+Both open and closed melting systems are used in gas atomization. When the metal is molten in open air, the risk of oxidation and contamination is increased, even if the slag provides a natural protection that is very commonly used in pyro-metallurgical processes~\cite{Holappa2016SlagFormation}. Open air induction heating system can accept a bigger volume of metal but it will give a less good powder quality.\\
 
-\textcolor{violet}{In a context of process optimization, caracterizing different feedstocks with the on site facilities would be a nice sanity check to align with the literature results. Eventually, after that first step is controlled, it would be nice to continue the parameters optimization with vacuum heating}
+\textcolor{RoyalPurple}{In a context of process optimization, caracterizing different feedstocks with the on-site facilities would be a nice sanity check to align with the literature results. Eventually, once this first step is controlled, it would be nice to continue the parameters optimization with vacuum heating. In order to be able to analyze properly the results, only one parameter has to be change for each iteration. To decrease the results given by combined parameters and to be able to improve the powder quality, on way would be, when it is possible, to focus on one parameter, optimize it, and keeping it optimized while modifying the next parameter, one by one. Some of the parameters are known in the literature to be significant in the powder quality improvement as well as requiring complex or expensive investments such as helium environment or a high quality feedstock. These parameters should be punctually tested for the sanity test and kept in mind to be re-introduced in the process only when it is consistent.}
 
 
 \subsubsection{Gaz environment}
