--- a/PhD_manuscript/bib.bib
+++ b/PhD_manuscript/bib.bib
@@ -49,6 +49,16 @@
   file = {C:\Users\reymo\Zotero\storage\4ATUI9FB\Neikov et al. - 2009 - Handbook of Non-Ferrous Metal Powders Technologies and Applications.pdf}
 }
 
+@article{Singh2001Studyfree,
+  title = {Study of Free Fall Gas Atomisation of Liquid Metals to Produce Powder},
+  author = {Singh and Koria and Dube},
+  year = 2001,
+  journal = {Powder Metallurgy},
+  doi = {10.1179/003258901666239},
+  urldate = {2026-02-18},
+  file = {C:\Users\reymo\Zotero\storage\ESQC9Q5V\Singh et al. - 2001 - Study of free fall gas atomisation of liquid metals to produce powder.pdf}
+}
+
 @article{Wang2023Numericalanalysis,
   title = {Numerical Analysis of Droplet Breakup, Cooling, and Solidification during Gas Atomisation},
   author = {Wang, Gezhou and Deng, Yuanbin and {Adjei-Kyeremeh}, Frank and Zhang, Jiali and Raffeis, Iris and {B{\"u}hrig-Polaczek}, Andreas and Kaletsch, Anke and Broeckmann, Christoph},
