--- a/PhD_notebook/administration.tex
+++ b/PhD_notebook/administration.tex
@@ -15,3 +15,13 @@ $\Rightarrow$ \href{https://employeecourses.dtu.dk/en/hr/administrative-staff/dt
 \todo{$\succ$  Introduction to responsible conduct of research and research data management for new employees}
 
 $\Rightarrow$ \href{https://employeecourses.dtu.dk/en/hr/administrative-staff/introduction-to-responsible-conduct-of-research-and-research-data-management-for-new-employees/}{chose 6 April from 9am to 1 pm}
+
+
+
+
+
+
+
+
+
+\todo{$\succ$ --------------------}
