--- a/PhD_notebook/bibliography.tex
+++ b/PhD_notebook/bibliography.tex
@@ -2,7 +2,12 @@
 
 \subsection{Powder production processes}
 
-\subsubsection{Gas atomization}
+\subsubsection{Free fall and confined gas atomization}
+
+The free fall and confined gas atomization are similar in the process description. The main difference is the distance between the bottom of the liquid metal nozzle and the gaz impact point. On the confined side, the gaz jet is hit the liquid metal stream just after it leaves the delivery tube, and the gaz jets direction are generally tangential to the liquid metal stream. On the free fall side, the metal stream is hit after a certain distance which can be more than 100~mm under the delivery tube~\cite{Singh2001Studyfree}.
+
+\todo{$\succ$ Why: gaz jets direction are generally tangential to the liquid metal stream}
+
 \subsubsection{Water atomization}
 \subsubsection{Centrifugal atomization}
 \subsubsection{Plasma atomization}
@@ -26,7 +31,13 @@ Both open and closed melting systems are used in gas atomization. When the metal
 
 \subsubsection{Nozzle geometry}
 
-\subsubsection{Thermal condition}
+\textcolor{RoyalPurple}{CAUTION: when design different nozzle with different apex angle, the impact height can change if only the gaz nozzle angle are modified. To modify only one parameter (the angle), the location of the nozzle have to be adapted to keep the same impact height.}
+
+\subsubsection{Thermal condition and properties of the molten metal}
+
+The temperature of the molten metal and its surface tension affect the process efficiency.\\
+When increasing both the gaz and liquid metal flow, the powder size distribution is reduced~\cite{Kassym2020Atomizationprocesses}.
+
 
 \subsection{Powder caracterization}
 
