--- a/PhD_notebook/administration.tex
+++ b/PhD_notebook/administration.tex
@@ -1,6 +1,7 @@
 \section{Administration}
 
 \todo{$\succ$ Create tax card, need contract information as salary}
+\todo{$\succ$ What pension config ? If not in the salary, can I bring it back to France in 3 years?}
 
 $\Rightarrow$ \href{https://www.tastselv.skat.dk/fskindb2/DigitalSkat/Indberetning.aspx?pow=GlTrDyLUuykasbK6LIovUTkHHqs%2b9Bds9KsZvEnnWoWr53xUJLBS0c27KA6xBiSj9e4pmWSBMsCqAZU%2f1RBMSFfJUzrj9UPjK4H8qTAkTQE%3d}{link is here and go to Forskudsopgørelse}
 
